game-server/target/debug/build/crossbeam-utils-2fce6d583a081d89/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/hussain/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:2959:1
     |
2959 | / atomic_int! {
2960 | |     cfg(target_has_atomic = "16"),
2961 | |     cfg(target_has_atomic_equal_alignment = "16"),
2962 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2974 | |     u16 AtomicU16
2975 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
